--- a/trunk/Common/ServiceStack.Redis/ServiceStack.Redis/ServiceStack.Redis.csproj
+++ b/trunk/Common/ServiceStack.Redis/ServiceStack.Redis/ServiceStack.Redis.csproj
@@ -71,6 +71,11 @@
   <ItemGroup>
     <Compile Include="BasicRedisClientManager.cs" />
     <Compile Include="BasicRedisClientManager.ICacheClient.cs" />
+    <Compile Include="Generic\RedisClientHash.Generic.cs" />
+    <Compile Include="Generic\RedisTypedClient_Hash.cs" />
+    <Compile Include="Generic\IRedisHash.Generic.cs" />
+    <Compile Include="Generic\RedisTypedClient_SortedSet.cs" />
+    <Compile Include="Generic\RedisClientSortedSet.Generic.cs" />
     <Compile Include="RedisClientHash.cs" />
     <Compile Include="Generic\IRedisSortedSet.Generic.cs" />
     <Compile Include="Generic\RedisTypedClient_Set.cs" />
