--- a/trunk/Common/ServiceStack.Common/ServiceStack.Common.Tests/ServiceStack.Common.Tests.csproj
+++ b/trunk/Common/ServiceStack.Common/ServiceStack.Common.Tests/ServiceStack.Common.Tests.csproj
@@ -88,6 +88,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\DdnContentIngest.cs" />
     <Compile Include="EnumerableExtensionsTests.cs" />
     <Compile Include="IdUtilsTests.cs" />
     <Compile Include="Models\IModelFactory.cs" />
@@ -167,6 +168,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Models\DdnContentIngest\" />
     <Folder Include="Text\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
