--- a/trunk/ServiceStack.Examples/ServiceStack.Examples.Host.Web/Web.config
+++ b/trunk/ServiceStack.Examples/ServiceStack.Examples.Host.Web/Web.config
@@ -18,8 +18,8 @@
 	<appSettings> 
 		<add key="ConnectionString" value="~/App_Data/exampledb.sqlite"/>
 		<add key="DefaultFibonacciLimit" value="10"/>
-	</appSettings> 
-	<connectionStrings/> 
+	</appSettings>  
+	<connectionStrings/>   
 	<system.web>
 		<!-- 
             Set compilation debug="true" to insert debugging 
@@ -108,6 +108,9 @@
 			<add name="Json.Metadata" path="Public/Json/Metadata" type="ServiceStack.WebHost.Endpoints.Metadata.JsonMetadataHandler, ServiceStack" verb="*" preCondition="integratedMode" resourceType="Unspecified"/>
 			<add name="Json.AsyncOneWay" path="Public/Json/AsyncOneWay" type="ServiceStack.WebHost.Endpoints.JsonAsyncOneWayHandler, ServiceStack" verb="*" preCondition="integratedMode" resourceType="Unspecified"/>
 			<add name="Json.SyncReply" path="Public/Json/SyncReply" type="ServiceStack.WebHost.Endpoints.JsonSyncReplyHandler, ServiceStack" verb="*" preCondition="integratedMode" resourceType="Unspecified"/>
+			<add name="Jsv.Metadata" path="Public/Jsv/Metadata" type="ServiceStack.WebHost.Endpoints.Metadata.JsvMetadataHandler, ServiceStack" verb="*" preCondition="integratedMode" resourceType="Unspecified"/>
+			<add name="Jsv.AsyncOneWay" path="Public/Jsv/AsyncOneWay" type="ServiceStack.WebHost.Endpoints.JsvAsyncOneWayHandler, ServiceStack" verb="*" preCondition="integratedMode" resourceType="Unspecified"/>
+			<add name="Jsv.SyncReply" path="Public/Jsv/SyncReply" type="ServiceStack.WebHost.Endpoints.JsvSyncReplyHandler, ServiceStack" verb="*" preCondition="integratedMode" resourceType="Unspecified"/>
 		</handlers>
 	</system.webServer>
 
