--- a/trunk/Common/ServiceStack.Common/ServiceStack.ServiceModel.Tests/ServiceStack.ServiceModel.Tests.csproj
+++ b/trunk/Common/ServiceStack.Common/ServiceStack.ServiceModel.Tests/ServiceStack.ServiceModel.Tests.csproj
@@ -51,9 +51,17 @@
     <Optimize>false</Optimize>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Northwind.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Lib\Northwind.Common.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework, Version=2.4.8.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Lib\nunit.framework.dll</HintPath>
+    </Reference>
+    <Reference Include="ServiceStack.Interfaces, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Lib\ServiceStack.Interfaces.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
@@ -72,6 +80,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ServiceModelSerializerTests.cs" />
     <Compile Include="DataContracts\ArrayOfGuidId.cs" />
     <Compile Include="DataContracts\ArrayOfIntId.cs" />
     <Compile Include="DataContracts\ArrayOfStringId.cs" />
