--- a/ServiceStack.Examples/ServiceStack.Examples.Tests.Integration/ServiceStack.Examples.Tests.Integration.csproj
+++ b/ServiceStack.Examples/ServiceStack.Examples.Tests.Integration/ServiceStack.Examples.Tests.Integration.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{969644BC-B209-4458-8DC1-041D7A9ADD3B}</ProjectGuid>
+    <ProjectGuid>{21777EAF-74FD-4D0B-947A-C602D8D3EBBA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ServiceStack.Examples.ServiceInterface.Tests</RootNamespace>
-    <AssemblyName>ServiceStack.Examples.ServiceInterface.Tests</AssemblyName>
+    <RootNamespace>ServiceStack.Examples.Tests.Integration</RootNamespace>
+    <AssemblyName>ServiceStack.Examples.Tests.Integration</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,14 +31,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Mono.Data.Sqlite, Version=2.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Lib\Mono.Data.Sqlite.dll</HintPath>
-    </Reference>
-    <Reference Include="Moq, Version=2.6.1014.1, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Lib\Moq.dll</HintPath>
-    </Reference>
     <Reference Include="nunit.framework, Version=2.4.8.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Lib\nunit.framework.dll</HintPath>
@@ -69,24 +61,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GetUsersTests.cs" />
-    <Compile Include="MonoTests\Soap12WsdlProgram.cs" />
-    <Compile Include="StoreNewUserTests.cs" />
-    <Compile Include="GetFibonacciNumbersTests.cs" />
-    <Compile Include="GetFactorialTests.cs" />
-    <Compile Include="TestHostBase.cs" />
+    <Compile Include="IntegrationTestBase.cs" />
+    <Compile Include="IntegrationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ServiceStack.Examples.Host.Console\ServiceStack.Examples.Host.Console.csproj">
+      <Project>{77363223-98F2-4724-8044-569C6485B3A9}</Project>
+      <Name>ServiceStack.Examples.Host.Console</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ServiceStack.Examples.ServiceInterface\ServiceStack.Examples.ServiceInterface.csproj">
       <Project>{519A7B72-D144-436D-AAC3-7BAAEAD3FF52}</Project>
       <Name>ServiceStack.Examples.ServiceInterface</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="sqlite3.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
