--- a/trunk/Common/ServiceStack.Redis/RedisWebServices/RedisWebServices.Host/RedisWebServices.Host.csproj
+++ b/trunk/Common/ServiceStack.Redis/RedisWebServices/RedisWebServices.Host/RedisWebServices.Host.csproj
@@ -72,17 +72,17 @@
     <Content Include="AjaxClient\js\app\App.js" />
     <Content Include="AjaxClient\jsOld\RedisClient.sample.js" />
     <Content Include="AjaxClient\js\RedisClient.js" />
-    <Content Include="AjaxClient\js\rx.html.js" />
-    <Content Include="AjaxClient\js\rx.jQuery.js" />
-    <Content Include="AjaxClient\js\rx-.js" />
+    <Content Include="AjaxClient\js\wcf-ostynscormtime.js" />
     <Content Include="AjaxClient\tests\default.htm" />
     <Content Include="AjaxClient\tests\src\CommonUtils.Tests.js" />
+    <Content Include="AjaxClient\tests\src\RedisClient.Tests.js" />
     <Content Include="AjaxClient\tests\src\RedisClientList.Tests.js" />
     <Content Include="AjaxClient\tests\src\RedisClientSortedSet.Tests.js" />
     <Content Include="AjaxClient\tests\src\RedisClientSet.Tests.js" />
     <Content Include="AjaxClient\tests\src\RedisClientHash.Tests.js" />
-    <Content Include="AjaxClient\tests\src\RedisClientCommon.Tests.js" />
     <Content Include="AjaxClient\jsOld\RedisClient.Tests.js" />
+    <Content Include="AjaxClient\tests\src\Z_RedisClientCommon.Tests.js" />
+    <Content Include="AjaxClient\tests\src\Z_RedisClientTimedOrBlocking.Tests.js" />
     <Content Include="AjaxClient\tests\src\_Template.Tests.js" />
     <Content Include="AjaxClient\tests\src\JsonServiceClient.Tests.js" />
     <Content Include="AjaxClient\tests\testLib.css" />
